# Scribe

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: unittests.yml
docs/: design.md  mvp_checklist.md  schema.md  tome.md
examples/: data.json  schema.json  schema1.json
include/scribe/: array.h  base.h  codegen.h  io.h  io_hdf5.h  io_json.h  read_json.h  schema.h  scribe.h  tome.h  validate_json.h  verify_json.h
src/: codegen.cpp  io_hdf5.cpp  io_json.cpp  main.cpp  read_json.cpp  schema.cpp  tome.cpp  validate_json.cpp  verify_json.cpp
tests/: codegen.cpp  json.cpp  tome.cpp
tests/example_project/: CMakeLists.txt  data.h5  data.json  example.cpp  mystruct.json
